--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">  -->
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/global.css">
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <title>MovieHubX</title>
   </head>
   <body>
